--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "expressApiServer",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "dev": "nodemon --config src/server/system/config/nodemon.json src/server/system/main.ts",
     "start": "node dist/index.ts",
+    "hoge": "node --experimental-loader=ts-node/esm --es-module-specifier-resolution=node src/server/system/main.ts",
     "build": "tsc"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "tsconfig-paths": "^3.12.0"
   }
 }
